# surge

./: .gitignore  Cargo.toml  README.md  subscribe.list.sample
source/: 0.general.conf  1.replica.conf  2.rule.conf  3.host.conf  4.url-rewrite.conf  5.mitm.conf  6.script.conf
src/: main.rs  source.rs  subscribe.rs  utils.rs
